<resources>

    <string name="app_name">Whootin Files</string>
    <string name="add_app_name">Add to Whootin Files</string>
    <string name="app_name1">Gallery</string>
    <string name="fname">FirstName</string>
    <string name="lname">LastName</string>
    <string name="uname">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Id</string>
    <string name="dob">Date of Birth</string>
    <string name="rpassword">Confirm Password</string>
    <string name="date">Select Date</string>
	<string name="txt_clr">#37a8cc</string>
	<string name="txt_fld">#37a8cc</string>
	<string name="hnt_clr">#a2e1f5</string>
	<string name="ln_clr">#ffb4ac</string>
	<string name="pp_hdnm">Filename already exists?</string>
	<string name="pg_hdnm">Above files are uploading</string>
	<string name="pg_succes">Uploaded Successfully</string>
    <string name="terms">I accept terms and conditions.</string>
    <string name="privacy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="space">Space Used</string>
    <string name="percentage">%</string>
    <string name="gb">GB</string>
    <string name="upgrade">Upgrade Account</string>
    <string name="code">Passcode Lock</string>
    <string name="help">Help</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="friend">Tell Friends about Whootin Files</string>
	<string name="singout">Sign out from Whootin Files</string>
	<string-array name="animation_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="passcode_manage">Manage Passcode</string>
    <string name="passcode_enter_passcode">Enter your Passcode</string>
    <string name="passcode_enter_old_passcode">Enter your old Passcode</string>
    <string name="passcode_re_enter_passcode">Re-enter your Passcode</string>
    <string name="passcode_change_passcode">Change Passcode</string>
    <string name="passcode_set">Passcode set</string>
    <string name="passcode_wrong_passcode">Wrong Passcode, please try again.</string>
    <string name="passcode_preference_title">Passcode lock</string>
    <string name="passcode_turn_off">Turn Passcode Off</string>
    <string name="passcode_turn_on">Turn Passcode On</string>
</resources>
